[package]
name = "rusty-sqlite3"
version = "0.2.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "*"
serde = { version = "*", features = ["derive"]}
time = { version = "*", features = ["serde-human-readable", "macros"]}
tokio = { version = "*", features = ["macros", "rt"]}
sqlx = { version = "*", features = ["runtime-tokio-rustls", "time", "sqlite"]}

[dependencies.neon]
version = "*"
default-features = false
features = ["napi-6", "promise-api", "channel-api"]
