[package]
name = "rusty-sqlite3"
version = "0.5.1"
license = "MIT"
edition = "2021"
authors = ["Ming Chang <mail@mingchang.tw>"]
homepage = "https://github.com/ming900518/rusty-sqlite3"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "*"
serde = { version = "*", features = ["derive"]}
time = { version = "*", features = ["serde-human-readable", "macros"]}
tokio = { version = "*", features = ["macros", "rt-multi-thread"]}
sqlx = { version = "*", features = ["runtime-tokio-rustls", "time", "sqlite"]}

[dependencies.neon]
version = "*"
default-features = false
features = ["napi-6", "promise-api", "channel-api"]
